# book-management-system-demo

./: README.md  pyproject.toml
app/: config.py  main.py
app/auth/: auth_dependencies.py  auth_routers.py  auth_schemas.py  auth_service.py  auth_utils.py
app/books/: routes.py  schemas.py  services.py
app/db/: db_main.py  models.py  redis.py
app/reviews/: review_routes.py  review_schemas.py  review_service.py
app/tests/: conftest.py  test_auth.py  test_books.py
migrations/: env.py
migrations/versions/: 105681340ae1_changes_to_the_models.py  36bad28d7d46_minor_changes_on_the_review_and_other_.py  42bfe59188b0_add_password_hash.py  5546a4843d6a_init.py  6804017c618d_changes_to_the_models.py  6de1ae4f126e_added_reviews_table.py  8b5f573531c1_user_table_and_books_table_connection.py  bf02f5423680_minor_change.py  c89c928db808_minor_changes_on_the_review_and_other_.py  ca9a824f5f2c_add_roles_to_users.py  e31009d09564_minor_change.py  e85c332f8def_minor_changes_on_the_review_and_other_.py  e8dd14166ec4_added_reviews_table.py
